# minimalwave-blog

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_GUIDE_IMAGES.md  Dockerfile  MIGRATION_PREVENTION_SUMMARY.md  MIGRATION_SAFETY.md  MIGRATION_WORKFLOW.md  Makefile  README.md  add_entry.html  azure_deployment_guide.md  cookies.txt  create_default_card.py  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  format_django_templates.py  format_templates.py  linkedin_integration_schema.md  manage.py  post_page.html  pyproject.toml  requirements.txt  supervisord.conf  test_admin_save.py  test_precommit.py  test_scheduling.sh  todo-azure-deployment-checklist.md  todo.md
.archive/: README.md
.archive/scripts/: check-migrations.sh  check_storage_config.py  docker-usage-warning.sh  enforce-dev-environment.sh  fix-azure-storage.sh  pre-migration-check.sh  setup-dev-aliases.sh  validate-migration-dependencies.sh  validate-migrations.sh
.archive/workflows/: azure-deploy.yml
.claude/commands/: edit-blog-content.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-deploy.yml  ci-cd.yml  migration-validation.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  deployment_architecture.md  project_overview.md  (+5 more)
blog/: admin.py  apps.py  linkedin_service.py  linkedin_urls.py  linkedin_views.py  models.py  related.py  signals.py  sitemaps.py  test_linkedin.py  tests.py  urls.py  utils.py  views.py  views_admin.py
core/: admin.py  admin_improvements.py  apps.py  context_processors.py  models.py  views.py  visitor_detection.py
docs/: AUTO_TAGGING.md  AUTO_TAGGING_QUICKSTART.md  AZURE_STORAGE_TROUBLESHOOTING.md  CI-CD-PIPELINE.md  MARKDOWN_IMAGE_GUIDE.md  azure-deployment.md  backup-strategy.md  completion-summary.md  project-history.md  ssl-setup.md
linkedin/: admin.py  apps.py  linkedin_views.py  models.py
minimalwave-blog/: admin_config.py  asgi.py  context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
projects/: admin.py  models.py  sitemaps.py  urls.py  views.py
scripts/: README.md  azure-ops.sh  diagnose_production.sh  fix-site-domain-remote.sh  load-content-to-production.sh  migrate_taxonomy.py  migration-safety.sh  run_tests.py  scheduled-publishing.sh  setup-dev-environment.sh  setup_scheduled_publishing.sh  sync-db-from-production.sh  test-migrations-clean.sh  test_azure_storage.py
static/: site.webmanifest
templates/: 404.html  base.html  robots.txt  sitemap.xml  sitemap_index.xml
tests/: README_IMAGE_TESTS.md  __init__.py  manual_playwright_test.py  test_admin.py  test_blog.py  test_blog_flow.sh  test_content_commands.py  test_image_processing.py  test_image_storage.py  test_images.py  test_linkedin.py  test_projects.py  test_til.py  test_with_playwright.py
til/: admin.py  fix_models_import.py  models.py  sitemaps.py  urls.py  views.py
(+103 files in other folders)
