[tool.poetry]
name = "minimalwave-blog"
version = "0.1.0"
description = "A minimal wave aesthetics blog built with Django"
authors = ["James Fishwick"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.2"
markdown = "3.8"
pygments = "^2.18.0"
django-taggit = "6.1.0"
django-markdownx = "4.0.9"
django-allauth = "65.7.0"
pillow = "11.2.1"
gunicorn = "21.2.0"
whitenoise = "6.6.0"
psycopg = {extras = ["binary"], version = "^3.2"}
python-dotenv = "1.0.1"
dj-database-url = "2.1.0"
redis = "^5.0.0"
django-redis = "^5.4.0"
requests = "^2.31.0"
django-storages = {extras = ["azure"], version = "^1.14"}
django-csp = "^4.0"
anthropic = ">=0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.15.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
# Generated/vendored/archived code and Django migrations aren't hand-formatted.
extend-exclude = ["staticfiles", "*/migrations/*", ".archive"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort. Mirrors the old black+isort+flake8 setup.
select = ["E", "W", "F", "I"]
# E203 and E501 are owned by the formatter (matches the old flake8 setup; the
# formatter deliberately leaves long strings/comments/docstrings unwrapped).
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
# Settings modules use `from .base import *` (star imports) by design.
"minimalwave-blog/settings/*" = ["F403", "F405", "E402"]
"**/__init__.py" = ["F401"]
# Standalone Django scripts call django.setup() before importing models.
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["blog", "til", "projects", "core"]
